--- a/1Completeportifolio/utility.css
+++ b/1Completeportifolio/utility.css
@@ -16,3 +16,15 @@
 .justify-left{
     justify-content: left;
 }
+/* .align-center{
+    align-items: center;
+}
+.align-right{
+    align-items: right;
+}
+.align-left{
+    align-items: left;
+}
+.align-between{
+    align-items: space-between;
+} */
